--- a/apps/frontend/src/components/Feedback/FeedbackPopup/FeedbackPopup.module.scss
+++ b/apps/frontend/src/components/Feedback/FeedbackPopup/FeedbackPopup.module.scss
@@ -1,3 +1,7 @@
+.bodyPopup {
+	overflow: hidden;
+}
+
 .wrapper {
 	background-color: #fff;
 	padding: 35px;
